# geoindex

./: Cargo.toml  LICENSE  README.md
benches/: lookup.rs
src/: entry.rs  lib.rs  ty.rs
